# articles

./: .gitignore  README.md  condaMD.md  environment.md  pycharm.md
2022_07/remote_desktop/: remmina_desktop.md
2023_05/domestic_autonomous_driving_research_team/: domestic_autonomous_driving_research_team.md
2023_05/file_reader/: file_reader.md
2023_05/onnx2trt/: onnx2trt.md
2023_05/read_pcd_file/: read_pcd_file.md
2023_05/ros1_publish_bbox_topic/: ros1_publish_bbox_topic.md
2023_05/ros1_receive_pointcloud_msgs/: ros1_receive_pointcloud_msgs.md
2023_05/rosmsg_numpy_transfer/: rosmsg_numpy_transfer.md
2023_05/show_pointcloud/: show_pointcloud_and_bbox.md
2023_05/train_self_dataset_using_mmdet3d/: train_self_dataset_using_mmdet3d.md
2023_05/vscode/: vscode.md
2023_05/vscode_debug/: vscode_debug.md
2023_06/cpp_linux/: cpp_linux.md
2023_06/train_self_dataset_using_bevfusion/: train_self_dataset_using_bevfusion.md
2023_06/yaml2py/: yaml2py.md
2023_07/: dummyfile
2023_07/geely_cloud/: geely_cloud.md
2023_08/factory_pattern/: factory_pattern.md
2023_08/img_distort/: img_distort.md
2023_08/interview_Q_A/: README.md  ask.md  classic_paper.md  cs_basic.md  (+2 more)
2024_01/: conference.md
2024_03/: make_a_list.md
2024_06/: meta_dataset.py
deployment/src/onnx2trt/: CMakeLists.txt  onnx2trt.cpp
linux/: ssh远程环境本地可视化.md
ppt/: huawei2030.pptx  ubuntu远程桌面安装.pptx  激光雷达在ROS上的部署.pptx
pycharm/: pycharm.md
ros_receive_pointcloud_msgs/: ros_receive_pointcloud_msg_c++.md
ros接收点云消息话题/: README.md
ros接收点云消息话题/src/: CMakeLists.txt  main.cpp
(+45 files in other folders)
